# edwypub

./: LICENSE  README.md  pyproject.toml
edwypub/: __main__.py  core.py
